test/distributions/sparseBlock/setBlockWrongType.good
setBlockWrongType.chpl:12: error: setLocalBlock() expects its argument to be of type CSDom(2,int(64),domain(2,int(64),one),true,true,one)
setBlockWrongType.chpl:15: error: setLocalBlock() expects its argument to be of type CSDom(2,int(64),domain(2,int(64),one),true,true,one)
setBlockWrongType.chpl:18: error: setLocalBlock() expects its argument to be of type [CSDom(2,int(64),domain(2,int(64),one),true,true,one)] real(64)
